# video-embedding

./: .gitignore  README.md  setup.cfg  setup.py  train.ipynb
video_embedding/: __init__.py  augmentation.py  gui.py  io.py  model.py  preprocessing.py  setup.cfg  training.py  transformation.py  utils.py  visualization.py
