[metadata]
name = video-embedding
author = Caleb Weinreb
author_email = calebsw@gmail.com
url = https://github.com/dattalab/video-embedding
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    tqdm
    vidio
    opencv-python
    imageio[ffmpeg]
    torch
    matplotlib
    albumentations
    scikit-learn
    torchvision
    umap-learn
    numpy<2.0
    ipykernel
    pandas
    PySide6
    vispy

[options.extras_require]
dev = 
    sphinx
    sphinx-rtd-theme
    autodocsumm
    myst-nb

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    clip-viewer = video_embedding.gui:run

[versioneer]
VCS = git
style = pep440
versionfile_source = video_embedding/_version.py
versionfile_build = video_embedding/_version.py
tag_prefix =
parentdir_prefix = 